external-crates/move/crates/move-compiler/tests/move_2024/parser/path_usage.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04027]: invalid 'move' usage
   ┌─ tests/move_2024/parser/path_usage.move:16:9
   │
16 │         move x.y.z;
   │         ^^^^ Invalid 'move'. 'move' works only with variables, e.g. 'move x'. 'move' on a path access is not supported
